Update api schema and serializer function
