# swagger/v1.0.yaml
@@ -111,6 +111,16 @@ paths:
         - $ref: '#/components/parameters/practice_code'
         - $ref: '#/components/parameters/applied_date'
         - $ref: '#/components/parameters/sunset'
+        - $ref: '#/components/parameters/program'
+        - $ref: '#/components/parameters/min_applied_amount'
+        - $ref: '#/components/parameters/max_applied_amount'
+        - $ref: '#/components/parameters/category'
+        - $ref: '#/components/parameters/wq_benefits'
+        - $ref: '#/components/parameters/ancillary_benefits'
+        - $ref: '#/components/parameters/min_area_treated'
+        - $ref: '#/components/parameters/max_area_treated'
+        - $ref: '#/components/parameters/nutrient_type'
+        - $ref: '#/components/parameters/value_type'
       responses:
         '200':
           description: Return practices
@@ -215,7 +225,7 @@ components:
         default: 20
     huc8s:
       name: huc8s
-      description: HUC8s
+      description: HUC8 codes
       in: query
       required: false
       schema:
@@ -252,6 +262,77 @@ components:
       required: false
       schema:
         type: integer
+    program:
+      name: program
+      description: Practice program
+      in: query
+      required: false
+      schema:
+        type: string
+    min_applied_amount:
+      name: min_applied_amount
+      description: Practice minimum applied amount
+      in: query
+      required: false
+      schema:
+        type: number
+    max_applied_amount:
+      name: max_applied_amount
+      description: Practice maximum applied amount
+      in: query
+      required: false
+      schema:
+        type: number
+    category:
+      name: category
+      description: Practice category
+      in: query
+      required: false
+      schema:
+        type: string
+    wq_benefits:
+      name: wq_benefits
+      description: Practice water quality benefits
+      in: query
+      required: false
+      schema:
+        type: string
+    ancillary_benefits:
+      name: ancillary_benefits
+      description: Practice ancillary benefits
+      in: query
+      required: false
+      schema:
+        type: array
+        items:
+          type: string
+    min_area_treated:
+      name: min_area_treated
+      description: Practice minimum area treated
+      in: query
+      required: false
+      schema:
+        type: number
+    max_area_treated:
+      name: max_area_treated
+      description: Practice maximum area treated
+      in: query
+      required: false
+      schema:
+        type: number
+    nutrient_type:
+      name: nutrient_type
+      description: Practice nutrient type
+      in: query
+      required: false
+      schema:
+        type: string
+    value_type:
+      name: value_type
+      description: Practice value type
+      in: query
+      schema:
+        type: string
 
   schemas:
     Pagination:
